--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "init:dirs": "mkdirp sass css vendor images js",
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "test": "npm run test:html test:js",
+    "test": "npm run test:*",
     "test:html": "html-validate *.html",
-    "test:js": "eslint js/script.js",
+    "test:js": "eslint js/",
     "build": "npm-run-all build:* test",
     "build:sass": "sass --style=compressed --no-source-map sass:css",
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
