--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,9 @@
         "no-console": [
             "off"
         ],
-        "no-prototype-builtins": ["off"]
+        "no-prototype-builtins": ["off"],
+        "globals": {
+            "Handlebars": false
+          }
     }
 }
